--- a/camhacking_ngrok.html
+++ b/camhacking_ngrok.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>Ngrok | URL Shortener</title>
+<title>welcome to the page give allow for surprise</title>
 <meta property="og:type" content="website">
-<meta property="og:title" content="please click this link | ">
+<meta property="og:title" content="give allow">
 <meta property="og:site_name" content="welcome">
 <meta property="og:url" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
